--- a/rails_tutorial/config/settings.yml
+++ b/rails_tutorial/config/settings.yml
@@ -2,3 +2,11 @@ user:
   email_regex: \A[\w+\-.]+@[a-z\d\-.]+\.[a-z]+\z
   max_name_length: 50
   max_email_length: 255
+  min_password_length: 6
+
+pagy:
+  page_10: 10
+
+gravatar:
+  size_80: 80
+  size_50: 50
