--- a/rails_tutorial/Gemfile
+++ b/rails_tutorial/Gemfile
@@ -51,7 +51,9 @@ gem "faker", "2.21.0"
 
 gem "pagy"
 # Use Active Storage variants [https://guides.rubyonrails.org/active_storage_overview.html]
-# gem "image_processing", "~> 1.2"
+gem "image_processing", "~> 1.2"
+
+gem "active_storage_validations", "0.9.8"
 
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html
