--- a/rails_tutorial/config/settings.yml
+++ b/rails_tutorial/config/settings.yml
@@ -4,6 +4,15 @@ user:
   max_email_length: 255
   min_password_length: 6
 
+micropost:
+  max_content_length: 140
+  digit_50: 50
+
+image:
+  width: 500
+  height: 500
+  size_5: 5
+
 pagy:
   page_10: 10
 
